<resources>
    <string name="placeholder">--------------------</string>
    <string name="placeholderBig">FONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFON</string>
    <string name="placeholder_question">Olá meu jovem amiguinho vou responder suas perguntas aqui, basta dar aquela clicadinha ;)</string>
    <string name="app_name">Parthenon</string>
    <string name="title_prog">Programação</string>
    <string name="title_profile">Evento</string>
    <string name="title_noticias">Notícias</string>
    <string name="title_faq">Perguntas Frequentes</string>
    <string-array name="ordenacoes">
        <item>Palestra</item>
        <item>Palestrante</item>
        <item>Local</item>
        <item>Data</item>
    </string-array>
    <string name="search">Pesquisar</string>
    <string name="filterButton">Filtrar Busca</string>
    <string name="order">Ordenar Por: </string>
    <string name="orderASC">Crescente</string>
    <string name="orderDSC">Decrescente</string>
    <string name="palestras">Palestras</string>
    <string name="minicursos">Minicursos</string>
    <string name="todos">Todos</string>
    <string name="inscritos">Inscritos</string>
    <string name="img_p_placeholder">Imagem da Palestra/Minicurso</string>
    <string name="name_placeholder">Nome: </string>
    <string name="time_placeholder">Hora: </string>
    <string name="local_placeholder">Local: </string>
    <string name="question_content">Question</string>
    <string-array name="questions">
        <item>zi Padrão de Pergunta do FAQ! Padrão de Pergunta do FAQ! Padrão de Pergunta do FAQ!</item>
        <item>zi Padrão de Pergunta do FAQ! Padrão de Pergunta do FAQ!</item>
        <item>ze Padrão de Pergunta do FAQ! Padrão de Pergunta do FAQ! Padrão de Pergunta do FAQ!</item>
        <item>za Padrão de Pergunta do FAQ! Padrão de Pergunta do FAQ! Padrão de Pergunta do FAQ!</item>
        <item>fo Padrão de Pergunta do FAQ! Padrão de Pergunta do FAQ!</item>
        <item>fi Padrão de Pergunta do FAQ! Padrão de Pergunta do FAQ! Padrão de Pergunta do FAQ!</item>
        <item>fe Padrão de Pergunta do FAQ!</item>
        <item>fa Padrão de Pergunta do FAQ! Padrão de Pergunta do FAQ!</item>
    </string-array>
    <string-array name="answer">
        <item>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</item>
        <item>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</item>
        <item>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</item>
        <item>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</item>
        <item>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</item>
        <item>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</item>
        <item>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</item>
        <item>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</item>
    </string-array>
    <string name="base">Usar base 8 IGFJAHSJ,K</string>
    <string name="version">v 0.0.1.0</string>
    <string name="title_activity_maps">map</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>
    <string name="inscricao_placeholder_1">Você ainda não selecionou as atividades que gostaria de participar.</string>
    <string name="inscricao_bt_1">Escolher Atividades</string>
    <string name="key_staff">keystaff</string>
    <string name="key_organizador">keyorganizador</string>
    <string name="key_palestrante">keypalestrante</string>
    <string name="limite_insc_title">Limite de Inscrições</string>
    <string name="limite_insc_text">Você atingiu o limite de inscrições (10). Para se inscrever nesta atividade, remova sua inscrição de outra.</string>
    <string name="lb_titulo">Título (nome) *</string>
    <string name="lb_sumario">Sumário (descrição do conteúdo)</string>
    <string name="lb_palestrante">Palestrante(s) *</string>
    <string name="lb_local">Local *</string>
    <string name="lb_vagas">Vagas</string>
    <string name="lb_data">Data *</string>
    <string name="lb_hora_i">Hora (início) *</string>
    <string name="lb_hora_f">Hora (fim)</string>
    <string name="empty"></string>
    <string name="title_erro_criacao">Preencha todos os campos obrigatórios</string>
    <string name="title_confirma_criacao">Atividade criada com sucesso!</string>
    <string name="evt_nome">Mostra Acadêmica</string>
    <string name="evt_organizacao">Organizado por: </string>
    <string name="evt_dia">Data: </string>
    <string name="evt_local">Local: </string>
    <string name="evt_info">Sobre o Evento: </string>
    <string name="editar_evento_title">Tem certeza que deseja confirmar as alterações dos dados do evento?</string>
    <string name="editar_evento_msg">Esta ação é irreversível.</string>
</resources>