<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="#00F8F8F8"
    android:layout_margin="10dp"
    app:cardCornerRadius="0dp"
    app:contentPadding="5dp"
    tools:context=".fragment.InscricaoTemplate">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/imgContainer"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/img_p_placeholder"
            android:src="@mipmap/palestra_img_bg"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/first_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="110dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toEndOf="@id/imgContainer"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/inscricao_placeholder_1"
                android:textSize="@dimen/small_font_size" />

            <CheckBox
                android:id="@+id/inscrever"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:id="@+id/autor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder"
            android:textSize="@dimen/small_font_size"
            app:layout_constraintLeft_toRightOf="@id/imgContainer"
            app:layout_constraintTop_toBottomOf="@id/first_line"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/time_placeholder"
            android:textSize="@dimen/small_font_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/imgContainer" />

        <TextView
            android:id="@+id/local"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/local_placeholder"
            android:textSize="@dimen/small_font_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>