<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:contentDescription="Atividades"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="5dp"
    app:contentPadding="5dp"
    tools:context=".fragment.Templates.ProgramacaoTemplate">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/imgContainer"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/img_p_placeholder"
            android:src="@mipmap/palestra_img_bg"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:id="@+id/infoLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_info_24dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </FrameLayout>

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_placeholder"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/small_font_size"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@id/imgContainer"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/autor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/small_font_size"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@id/imgContainer"
            app:layout_constraintTop_toBottomOf="@id/name" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_placeholder"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/small_font_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/imgContainer" />

        <TextView
            android:id="@+id/local"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/local_placeholder"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/small_font_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>