<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:contentDescription="Inscricoes"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="0dp"
    app:contentPadding="5dp"
    tools:context=".fragment.Templates.InscricaoTemplate">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:id="@+id/first_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/inscricao_placeholder_1"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/small_font_size"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/inscrever"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>

        <TextView
            android:id="@+id/autor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/small_font_size"
            app:layout_constraintTop_toBottomOf="@id/first_line"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_placeholder"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/small_font_size"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/autor"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/local"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/local_placeholder"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/small_font_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>